fix by gw:act sonar-fix.